:no_entry:  Mobile display hidden

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 </head>
 
 <body>
+    <div class="mobileHidden">
+        
+    </div>
     <div class="perlinSelector">
         <h2>generative design</h2>
         <h4>by lucas lareginie</h4>
