:mobile_phone_off:  Mobile hidden

--- a/index.html
+++ b/index.html
@@ -3,16 +3,20 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>generative design - lucaslareginie</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="favicon.ico" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
     <div class="mobileHidden">
-        
+        <i class="fa-exclamation-triangle fa"id="danger"></i>
+        <div class="txtHidden">
+            Sorry ! This website is made for desktop only :(
+        </div>
     </div>
     <div class="perlinSelector">
         <h2>generative design</h2>
