--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>generative design - lucaslareginie</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="favicon.ico" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="style/style.css">
+    <link rel="icon" href="ressources/favicon.ico" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
@@ -44,10 +44,10 @@
     <canvas id="canvasP"width="1500" height="740"></canvas>
 
 
-    <script src="perlin.js"></script>
-    <script src="corePerlin.js"></script>
-    <script src="art.js"></script>
-    <script src="main.js"></script>
+    <script src="script/perlin.js"></script>
+    <script src="script/corePerlin.js"></script>
+    <script src="script/art.js"></script>
+    <script src="script/main.js"></script>
 </body>
 
 </html>
