Add new draw function Fibonnaci + New theme "line"

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style/style.css">
     <link rel="icon" href="ressources/favicon.ico" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+        
 </head>
 <body>
     <div class="mobileHidden">
@@ -31,7 +31,10 @@
             <div class=" buttonC arcB">
                 arc
             </div>
-            <a href="https://github.com/Lucas-L/generative-design"class="gitlink buttonC">github</a>          
+            <div class=" buttonC linesB">
+                lines
+            </div>
+            <a href="https://github.com/Lucas-L/generative-design"class="gitlink "><img src="https://image.flaticon.com/icons/svg/23/23957.svg" alt=""></a>          
         </section>
         <section class="choiceActive">
         </section>
