Add 2 new effects

--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
         <i class="fa-exclamation-triangle fa"id="danger"></i>
         <div class="txtHidden">
             Sorry ! This website is made for desktop only :(
-        </div>
+        </div><!--  -->
     </div>
     <div class="perlinSelector">     
         <h2>generative design</h2>
-        <h4>by lucas lareginie</h4>
+        <div class="close">
+            <img src="https://image.flaticon.com/icons/svg/151/151882.svg" alt="">
+        </div>
         <section class="choice">
             <div class=" buttonC reptileB">
                 reptile
@@ -33,6 +35,12 @@
             </div>
             <div class=" buttonC linesB">
                 lines
+            </div>
+            <div class=" buttonC lychenB">
+                lychen
+            </div>
+            <div class=" buttonC pastaB">
+                pasta
             </div>
             <a href="https://github.com/Lucas-L/generative-design"class="gitlink "><img src="https://image.flaticon.com/icons/svg/23/23957.svg" alt=""></a>          
         </section>
